# Generated by Django 5.2.6 on 2025-09-29 14:32

import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='ActividadPosible',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Cubierta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_de_cubierta', models.IntegerField()),
                ('descripcion', models.TextField()),
                ('encargado', models.CharField(max_length=100)),
            ],
        ),
        migrations.CreateModel(
            name='EstadoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoPasajero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoReserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Itinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='MetodoPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Navio',
            fields=[
                ('codigo_de_navio', models.AutoField(primary_key=True, serialize=False)),
                ('nombre', models.CharField(max_length=100)),
                ('altura', models.FloatField()),
                ('eslora', models.FloatField()),
                ('manga', models.FloatField()),
                ('desplazamiento', models.FloatField()),
                ('autonomia_de_viaje', models.IntegerField()),
                ('cantidad_maxima_de_pasajeros', models.IntegerField()),
                ('cantidad_de_motores', models.IntegerField()),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Rol',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, unique=True)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoItinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Tripulante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('legajo', models.CharField(max_length=50)),
                ('dni', models.CharField(max_length=20)),
                ('direccion', models.CharField(max_length=200)),
                ('fecha_nacimiento', models.DateField()),
                ('nacionalidad', models.CharField(max_length=50)),
                ('genero', models.CharField(max_length=20)),
            ],
        ),
        migrations.CreateModel(
            name='Viaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
                ('fecha_de_salida', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('hora_salida', models.TimeField()),
                ('hora_llegada', models.TimeField()),
                ('lugar_destino', models.CharField(max_length=100)),
                ('fecha_actual', models.DateField()),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='UsuarioPersonalizado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('nombre', models.CharField(max_length=50)),
                ('apellido', models.CharField(max_length=50)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('telefono', models.CharField(blank=True, max_length=20)),
                ('pais', models.CharField(blank=True, max_length=50)),
                ('groups', models.ManyToManyField(blank=True, related_name='usuario_personalizado_set', to='auth.group')),
                ('user_permissions', models.ManyToManyField(blank=True, related_name='usuario_personalizado_permissions_set', to='auth.permission')),
                ('rol', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='usuarios', to='compania_naviera.rol')),
            ],
            options={
                'verbose_name': 'user',
                'verbose_name_plural': 'users',
                'abstract': False,
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
                ('dni', models.CharField(max_length=20)),
                ('direccion', models.CharField(max_length=200)),
                ('fecha_nacimiento', models.DateField()),
                ('nacionalidad', models.CharField(max_length=50)),
                ('genero', models.CharField(max_length=20)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='clientes', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Camarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_de_camarote', models.IntegerField()),
                ('imagen', models.URLField(blank=True, null=True)),
                ('cubierta', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='camarotes', to='compania_naviera.cubierta')),
                ('estado_camarote', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadocamarote')),
                ('tipo_camarote', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tipocamarote')),
            ],
        ),
        migrations.AddField(
            model_name='cubierta',
            name='navio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cubiertas', to='compania_naviera.navio'),
        ),
        migrations.CreateModel(
            name='Orden',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
                ('orden', models.IntegerField()),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ordenes', to='compania_naviera.itinerario')),
            ],
        ),
        migrations.CreateModel(
            name='Pago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_pago', models.DateField()),
                ('monto', models.FloatField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('estado_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopago')),
                ('metodo_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.metodopago')),
            ],
        ),
        migrations.CreateModel(
            name='HistorialPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_cambio', models.DateField()),
                ('cambio_realizado', models.TextField()),
                ('estado_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopago')),
                ('usuario_responsable', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
                ('pago', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.pago')),
            ],
        ),
        migrations.CreateModel(
            name='Puerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('orden', models.IntegerField()),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='puertos', to='compania_naviera.itinerario')),
            ],
        ),
        migrations.CreateModel(
            name='PuertoxActividad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('actividad', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.actividadposible')),
                ('puerto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='actividades', to='compania_naviera.puerto')),
            ],
        ),
        migrations.CreateModel(
            name='Reserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.cliente')),
                ('estado_reserva', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadoreserva')),
            ],
        ),
        migrations.CreateModel(
            name='Pasajero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('estado_pasajero', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopasajero')),
                ('reserva', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pasajeros', to='compania_naviera.reserva')),
            ],
        ),
        migrations.AddField(
            model_name='pago',
            name='reserva',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pagos', to='compania_naviera.reserva'),
        ),
        migrations.CreateModel(
            name='HistorialReserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_cambio', models.DateField()),
                ('cambio_realizado', models.TextField()),
                ('reserva', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.reserva')),
            ],
        ),
        migrations.AddField(
            model_name='itinerario',
            name='categoria',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tipoitinerario'),
        ),
        migrations.AddField(
            model_name='navio',
            name='tipo_navio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tiponavio'),
        ),
        migrations.CreateModel(
            name='UbicacionPuerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nro_muelle', models.IntegerField()),
                ('nombre', models.CharField(max_length=100)),
                ('puerto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ubicaciones', to='compania_naviera.puerto')),
            ],
        ),
        migrations.CreateModel(
            name='ItinerarioViaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.itinerario')),
                ('viaje', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viaje')),
            ],
        ),
        migrations.CreateModel(
            name='ViajeXNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('precio', models.IntegerField(default=0)),
                ('navio', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.navio')),
                ('viaje', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viaje')),
            ],
        ),
        migrations.AddField(
            model_name='reserva',
            name='viaje_navio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio'),
        ),
        migrations.CreateModel(
            name='OcupacionCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('camarote', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.camarote')),
                ('pasajero', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='compania_naviera.pasajero')),
                ('tripulante', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='compania_naviera.tripulante')),
                ('viaje_navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio')),
            ],
        ),
        migrations.CreateModel(
            name='AsignacionTripulanteViaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('tripulante', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.tripulante')),
                ('viaje_navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio')),
            ],
        ),
    ]
