erDiagram
    Tripulante ||--o{ AsignacionTripulanteViaje : asignado_a
    ViajeX_Navio }o--|| Navio : puede_ser
    Navio }o--|| Tipo_de_navio : tiene
    Cliente }o--|| Usuario : representa
    Rol ||--o{ Usuario : tiene
    
    
    Cubierta }o--|| Navio : tiene
    Camarote }o--|| Cubierta : tiene

    Reserva ||--o{ Pago : paga
    EstadoPasajero ||--o{ Pasajero : tiene
    
    OcupacionCamarote }o--|| ViajeX_Navio : pertenece_a
    Camarote ||--o{ OcupacionCamarote : asignado_a
    OcupacionCamarote }o--|| Tripulante : es_tripulante
    OcupacionCamarote }o--|| Pasajero : es_pasajero

    Viaje ||--o{ Itinerarioviaj : para
    Itinerario ||--o{ Orden : tiene
    
    Orden ||--o{ Puerto : posee

    ViajeX_Navio }o--|| Viaje : puede_ser
    

    
    ViajeX_Navio ||--o{ AsignacionTripulanteViaje : tiene

    
    
    Reserva ||--o{ HistorialReserva : registra_cambios
    Reserva  }o--|| Cliente : hace

    MetodoPago ||--o{ Pago : usa
    EstadoPago ||--o{ Pago : clasifica
    Reserva }o--|| EstadoReserva : clasifica
    Itinerarioviaj }o--|| Itinerario : sigue
    
    

    ViajeX_Navio ||--o{ Reserva : tiene
    Pasajero }o--|| Reserva : incluye
    Camarote }o--|| Estado_Camarote : tiene
    Puertoxactividad }o--|| Actividades_posibles : posee
    Puerto ||--o{ Puertoxactividad : posee
    HistorialPago }o--|| Pago : registra_cambios
    
    HistorialPago }o--|| EstadoPago : posee
    Usuario ||--o{ HistorialPago : posee

    Camarote }|--|| TipoCamarote : tiene

    Puerto ||--o{ UbicacionPuerto : tiene

    Itinerario }o--|| Tipo_itinerario : pertenece
    
    
    OcupacionCamarote {
        int id_ocupacion_camarote PK
        int id_camarote FK
        int id_tripulante FK 
        int id_pasajero FK 
        int id_viaje_navio FK
        date fecha_inicio
        date fecha_fin
    }

    AsignacionTripulanteViaje {
        int id_asignacion PK
        int id_tripulante FK
        int id_viaje_navio FK
        date fecha_inicio
        date fecha_fin
    }

    HistorialReserva {
        int id_historial_reserva PK
        int id_reserva FK
        date fecha_cambio
        string cambio_realizado
    }

    HistorialPago {
        int id_historial_pago PK
        int id_pago FK
        date fecha_cambio
        string cambio_realizado
        int id_estado_pago FK
        int id_usuario_responsable FK
    }

    Puertoxactividad {
        int id_puertoxactividad PK
        int id_puerto FK
        int id_actividad FK
    }

    Estado_Camarote {
        int id_estado_camarote PK
        string descripcion
    }

    Pago {
        int id_pago PK
        int id_reserva FK
        date fecha_pago
        float monto
        int id_metodo_pago FK
        int id_estado_pago FK
        date created_at
        date updated_at
    }

    MetodoPago {
        int id_metodo_pago PK
        string nombre
        string descripcion
    }

    EstadoPago {
        int id_estado_pago PK
        string nombre
        string descripcion
    }

    ViajeX_Navio {
        int id_viaje_navio PK
        int id_navio FK
        int id_viaje FK
    }

    Tipo_de_navio {
        int id_tipo_navio PK
        string nombre
        string descripcion
    }

    Camarote {
        int id_camarote PK
        int numero_de_camarote
        int numero_de_cubierta FK
        int id_estado_camarote FK
        int id_tipo_camarote FK
        url imagen
    }

    TipoCamarote {
        int id_tipo_camarote PK
        string nombre
        string descripcion
    }

    Cubierta {
        int numero_de_cubierta PK
        int id_navio FK
        string descripcion
        string encargado
    }

    Navio {
        int codigo_de_navio PK
        string nombre
        float altura
        float eslora
        float manga
        float desplazamiento
        int autonomia_de_viaje
        int cantidad_maxima_de_pasajeros
        int cantidad_de_motores
        int id_tipo_navio FK
        url imagen
    }

    Viaje {
        int id_viaje PK
        string nombre
        string descripcion
        date fecha_de_salida
        date fecha_fin
        time hora_salida
        time hora_llegada
        string lugar_destino
        date fecha_actual
        url imagen
    }


    Tripulante {
        int id_tripulante PK
        string nombre
        string legajo
        string dni
        string direccion
        date fecha_nacimiento
        string nacionalidad
        string genero
    }


    Cliente {
        int id_cliente PK
        string nombre
        int id_usuario FK
        string apellido
        string dni
        string direccion
        date fecha_nacimiento
        string nacionalidad
        string genero
    }

    Pasajero {
        int id_pasajero PK
        int id_reserva FK
        string nombre
        string apellido
        date fecha_inicio
        date fecha_fin
        int id_estado_pasajero FK
    }

    EstadoPasajero {
        int id_estado_pasajero PK
        string nombre
        string descripcion
    }

    Reserva {
        int id_reserva PK
        string descripcion
        int id_viaje_navio FK
        int id_estado_reserva FK
        int id_cliente FK
        date created_at
        date updated_at
    }

    EstadoReserva {
        int id_estado_reserva PK
        string nombre
        string descripcion
    }

    Itinerario {
        int id_itinerario PK
        int id_categoria FK
        url imagen
    }

    Orden {
        int id_orden PK
        string nombre
        string descripcion
        int orden
        int initerario FK
    }

    Puerto {
        int id_puerto PK
        string nombre
        int orden FK
    }

    UbicacionPuerto {
        int id_ubicacion_puerto PK
        int id_puerto FK
        int nro_muelle
        string nombre
    }

    Actividades_posibles {
        int id_actividad PK
        string nombre
        string descripcion
    }

    Tipo_itinerario {
        int id_categoria PK
        string nombre
        string descripcion
    }

    Itinerarioviaj {
        int id_itinerarioviaje PK
        int id_viaje FK
        int id_itinerario FK
    }

    Usuario {
        int id_usuario PK
        string username
        string email
        string contrasenia
        int id_rol FK
    }

    Rol {
        int id_rol PK
        string nombre
        string descripcion
    }
